# housepricer

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: docker-image.yml  python-package.yml
app/: Dockerfile  app.py  requirements.txt
app/static/css/: style.css
app/templates/: about.html  base.html  index.html
data/: Encoder.save  EvolveModel.save  RandomModel.save
data/codepo_gb/Data/CSV/: ab.csv  al.csv  b.csv  ba.csv  bb.csv  bd.csv  bh.csv  bl.csv  bn.csv  br.csv  bs.csv  ca.csv  cb.csv  cf.csv  ch.csv  cm.csv  co.csv  cr.csv  ct.csv  cv.csv  cw.csv  da.csv  dd.csv  de.csv  dg.csv  dh.csv  dl.csv  dn.csv  dt.csv  dy.csv  e.csv  ec.csv  eh.csv  en.csv  ex.csv  fk.csv  fy.csv  g.csv  gl.csv  gu.csv  (+80 more)
data/codepo_gb/Doc/: Codelist.xlsx  NHS_Codelist.xls  licence.txt  metadata.txt  readme.txt
housepricer/: __main__.py  better_postcodes.py  cli.py  data_wrangling.py  debug.py  housepricetrainer.py  modeler.py  models.py  plot.py
tests/: conftest.py  test_app.py  test_better_postcodes.py  test_cli.py  test_data_wrangling.py  test_housepricetrainer.py  test_modeler.py  test_models.py
